# downify

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  setup.py
deploy/nginx/: downify.cdcult.ru.conf
downify/: bot.py  config.py  media.py  models.py  spotify.py  web.py
downify/providers/: __init__.py  base.py  jamendo.py
downify/static/: app.js  index.html  release.html  release.js  styles.css
