[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "downify"
version = "0.1.0"
description = "Minimal web app that resolves Spotify links to metadata and downloads matching legal audio from another provider."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
downify-web = "downify.web:main"

[tool.ruff]
line-length = 100
target-version = "py310"
